# Feynbot

./: .gitignore  LICENSE  README.md  configure.py  intents.json  launch.py  pyproject.toml  run.py
Source/: event.py  event_override.py  feynbot.py  handler_bot.py  utility.py
Source/Samples/: Command.py  CommandOverride.py  Event.py  EventOverride.py  sample_command.py  sample_command_override.py  sample_event.py  sample_event_override.py
Source/events/: on_connect.py  on_error.py  on_message.py  on_ready.py
commands/: debug_commands.py
events/: command_handling.py  logging.py
feynbot/: bot.py  commands.py  constants.py  context.py  data_interface.py  errors.py  events.py  handler.py  utility.py
